<?xml version="1.0"?>
<package>
  <name>maputil</name>
  <version>0.0.0</version>
  <description>Utilities for mapping</description>

  <maintainer email="ras@todo.todo">me</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>mapping_msgs</build_depend>
  <run_depend>mapping_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>mathutil</build_depend>
  <run_depend>mathutil</run_depend>

  <export>
  </export>
</package>
