<?xml version="1.0"?>
<package>
  <name>pclutil</name>
  <version>0.0.0</version>
  <description>PCL utilities</description>

  <maintainer email="michalst@kth.se">michal</maintainer>

  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
