<package>
  <name>utilities</name>
  <version>0.0.0</version>
  <description>
    Utilties metapackage
  </description>
  <maintainer email="michalst@kth.se">Michal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
   <metapackage />
 </export>
</package>
